--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <footer></footer>
     </main>
-    <script src="js/dojosjs.js"></script>
+    <script type="module" src="js/dojosjs.js"></script>
 </body>
 
 </html>
